@@ -81,7 +81,30 @@ zonelist file to be able to delete them with the delzone command.
 .B write [<zone>]
 Write zonefiles to disk, or the given zonefile to disk.  Zones that have
 changed (via AXFR or IXFR) are written, or if the zonefile has not been
-created yet then it is created.
+created yet then it is created.  Directory components of the zonefile
+path are created if necessary.
+.TP
+.B notify [<zone>]
+Send NOTIFY messages to slave servers.  Sends to the IP addresses
+configured in the 'notify:' lists for the master zones hosted on this
+server.  Usually NSD sends NOTIFY messages right away when a master zone
+serial is updated.  If a zone is given, notifies are sent for that zone.
+These slave servers are supposed to initiate a zone transfer request
+later (to this server or another master), this can be allowed via
+the 'provide\-xfr:' acl list configuration.
+.TP
+.B transfer [<zone>]
+Attempt to update slave zones that are hosted on this server by contacting
+the masters.  The masters are configured via 'request\-xfr:' lists.
+If a zone is given, that zone is updated.  Usually NSD receives a NOTIFY
+from the masters (configured via 'allow\-notify:' acl list) that a new zone
+serial has to be transferred.
+.TP
+.B force_transfer [<zone>]
+Force update slave zones that are hosted on this server.  Even if the
+master hosts the same serial number of the zone, a full AXFR is performed
+to fetch it.  If you want to use IXFR and check that the serial number
+increases, use the 'transfer' command.
 .TP
 .B verbosity <number>
 Change logging verbosity.
